--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar-brand {
+  font-family: 'Lobster', cursive;
+  color:rgb(68, 0, 255)
+}
+
+.navbar-nav a {
+  font-size: 18px;
+  font-family: 'Nanum Gothic', sans-serif;
+}
+.navbar-nav .active { 
+  border-bottom: 2px solid rgb(0, 119, 255);
+  transition: .5s;
+}
+.navbar-nav a, a:hover {
+  color: #000;
+  text-decoration: none;
+}
+
+.navbar-nav li {
+  display: inline-block;
+  position: relative;
+  padding-bottom: 3px;
+  margin-right: 10px;
+}
+.navbar-nav li:last-child {
+  margin-right: 0;
+}
+
+.navbar-nav li:after {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 2px;
+  width: 0px;
+  background: transparent;
+  transition: width .5s ease, background-color .5s ease;
+}
+.navbar-nav li:hover:after {
+  width: 100%; 
+  background: blue;
+}
+
+.signUp {
+  height: 100vh;
+  color: white;
+  padding-top: 15%;
+}
+.modal-signin {
+ padding: 8%;
+}
